--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@ slug: home
   </header>
   <div class="w-100 w-third-l fn fl-l pa0 pr4-l">
     <header class="wow animated fadeIn">
-      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Web & Interactive Design</h2>
+      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Web &amp; Interactive Design</h2>
     </header>
     <p class="measure lh-copy wow animated fadeInUp">We focus on design and technology as a broader approach to user experience, product performance and consumer perception. A website is a necessary tool for nearly every business and organization. Our interactive design approach focuses on usability, impact, and achieving results.</p>
-    <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/design.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
+    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/web-interactive-design.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   </div>
   <div class="w-100 w-third-l fn fl-l pa0 ph4-l">
     <header class="wow animated fadeIn">
-      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Branding & Strategy</h2>
+      <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Branding &amp; Strategy</h2>
     </header>
     <p class="measure lh-copy wow animated fadeInUp">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. By looking at the your goals and budget, we’ll create a strategy to reach your users across all digital mediums that articulates who you are, what you do, and why it matters.</p>
-    <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/strategy.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
+    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/branding-strategy.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   </div>
   <div class="w-100 w-third-l fn fl-l pa0 pl4-l">
     <header class="wow animated fadeIn">
       <h2 class="f4 f3-ns measure-narrow lh-copy wow animated fadeIn">Technology Consulting</h2>
     </header>
     <p class="measure lh-copy wow animated fadeInUp">Technology can solve real business problems by enabling new user experiences that promote growth and innovation. Studiocraft takes an agnostic approach towards technology to best fit the needs of you and your customer. The best-planned experience is wasted without a top-notch implementation.</p>
-    <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
+    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology-consulting.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   </div>
 </section>
 
