--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ slug: home
     <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology-consulting.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   </div>
 </section>
-
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="about">
+  <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }}</p>
+</section>
 {% include contact.html %}
 {% include location.html %}
 {% include subscribe.html %}
