--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ slug: home
     <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology-consulting.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   </div>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="about">
-  <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }}</p>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="about">
+  <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} is a user-centric independent design consultancy focusing on simplicity. Our creative process blends visual design, user experience, and content strategy to create relevant, brand-driven experiences that bring brands closer to their customers.</p>
 </section>
 {% include contact.html %}
 {% include location.html %}
