--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ slug: home
     <h1 class="f2 f1-ns lh-title tracked-tight">About</h1>
   </header>
   <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} is a user-centric independent design consultancy focusing on simplicity. Our creative process blends visual design, user experience, and content strategy to create relevant, brand-driven experiences that bring brands closer to their customers.</p>
+  <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-black b ttu tracked" href="{{ site.baseurl }}">Our Story</a>
 </center>
 {% include contact.html %}
 {% include location.html %}
