--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 slug: home
 ---
 
-<section class="cf ph3 ph4-ns pv4 pv6-ns bg-white" id="services">
+<center class="cf ph3 ph4-ns pv4 pv6-ns bg-white" id="services">
   <header class="wow animated fadeInDown">
     <h1 class="f2 f1-ns lh-title tracked-tight">Services</h1>
   </header>
@@ -29,7 +29,7 @@ slug: home
     <p class="measure lh-copy wow animated fadeIn">Technology can solve real business problems by enabling new user experiences that promote growth and innovation. Studiocraft takes an agnostic approach towards technology to best fit the needs of you and your customer. The best-planned experience is wasted without a top-notch implementation.</p>
     <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology-consulting.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
   </div>
-</section>
+</center>
 <center class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="about">
     <header class="wow animated fadeInDown">
     <h1 class="f2 f1-ns lh-title tracked-tight">About</h1>
