--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 slug: home
 ---
 
-<center class="cf ph3 ph4-ns pv4 pv6-ns bg-white" id="services">
+<center class="cf tc tl-ns ph3 ph4-ns pv4 pv6-ns bg-white" id="services">
   <header class="wow animated fadeInDown">
     <h1 class="f2 f1-ns lh-title tracked-tight">Services</h1>
   </header>
