--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ copy: is a user-centric independent design consultancy focusing on simplicity. O
   creative process blends visual design, user experience, and content strategy to
   create relevant, brand-driven experiences that bring brands closer to their customers.
 ---
-
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="about">
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="about">
   <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} {{ page.copy }}</p>
+  <p class="measure lh-copy wow animated fadeIn">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
