--- a/index.html
+++ b/index.html
@@ -2,80 +2,97 @@
 title: Home
 layout: default
 slug: home
+services:
+  - name: Web &amp; Interactive Design
+    slug: web-interactive-design
+    icon: code
+    description: |
+      We focus on design and technology as a broader approach to user experience, product performance and consumer perception. A website is a necessary tool for nearly every business and organization. Our interactive design approach focuses on usability, impact, and achieving results.
+  - name: Branding &amp; Strategy
+    slug: branding-strategy
+    icon: rocket
+    description: |
+      An iterative approach ensures that our clients' goals are realized at every stage of the creative process. By looking at the your goals and budget, we’ll create a strategy to reach your users across all digital mediums that articulates who you are, what you do, and why it matters.
+  - name: Technology Consulting
+    slug: technology-consulting
+    icon: microchip
+    description: |
+      Technology can solve real business problems by enabling new user experiences that promote growth and innovation. Studiocraft takes an agnostic approach towards technology to best fit the needs of you and your customer. The best-planned experience is wasted without a top-notch implementation.
 ---
 <center class="tc tl-ns ph3 ph4-ns pv4 pv6-ns bg-white" id="work">
   <header class="wow animated fadeInDown">
-    <h1 class="f2 f1-ns lh-title tracked-tight">Latest Work</h1>
+    <h1 class="f3 mb5 f2-ns lh-title tracked-tight">Current Work</h1>
   </header>
   <div class="cf">
-    <article class="fl w-100 w-50-l ph3 ph4-ns pv3 pv4-ns hover-bg-near-white">
+    <article class="fl w-100 w-50-l ph3 ph4-ns pv3 pv4-ns bg-animate bg-near-white hover-bg-white">
       <header class="wow animated fadeInUp">
         <label class="db mv1 tracked light-silver b ttu"><small>Web &amp; Interactive Design</small></label>
         <a class="dib no-underline hover-blue dark-gray" href="{{ site.baseurl }}/web-interactive-design.html">
-          <h1 class="f4 f3-ns lh-title">Periodic Table of Elements</h1>
+          <h1 class="mv2 f4 f3-ns lh-title">Periodic Table of Elements</h1>
         </a>
       </header>
       <p class="dn db-l measure lh-copy wow animated fadeIn">We focus on design and technology as a broader approach to user experience, product performance and consumer perception.</p>
       <a class="db link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/web-interactive-design.html">View Full Project<i class="fa fa-fw fa-long-arrow-right"></i></a>
     </article>
-    <article class="fl w-100 w-50-l ph3 ph4-ns pv3 pv4-ns hover-bg-near-white">
+    <article class="fl w-100 w-50-l ph3 ph4-ns pv3 pv4-ns bg-animate bg-light-gray hover-bg-white">
       <header class="wow animated fadeInUp">
         <label class="db mv1 tracked light-silver b ttu"><small>Branding &amp; Strategy</small></label>
         <a class="dib no-underline hover-blue dark-gray" href="{{ site.baseurl }}/web-interactive-design.html">
-          <h1 class="f4 f3-ns lh-title">Ray and Charles Eames</h1>
+          <h1 class="f4 mv2 f3-ns lh-title">Ray and Charles Eames</h1>
         </a>
       </header>
+      <figure class="mw5 mw6-ns center pt4">
+        <div class="aspect-ratio aspect-ratio--1x1 mb4">
+          <div class="aspect-ratio--object cover" style="background:url(http://mrmrs.io/photos/001.jpg) center;"></div>
+        </div>
+      </figure>
       <p class="dn db-l measure lh-copy wow animated fadeIn">We focus on design and technology as a broader approach to user experience, product performance and consumer perception.</p>
       <a class="db link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/web-interactive-design.html">View Full Project<i class="fa fa-fw fa-long-arrow-right"></i></a>
     </article>
   </div>
-  <footer class="db mv4">
+  <footer class="db mt5">
     <a class="dim no-underline br-pill ba bw1 ph4 pv3 dib near-black b ttu tracked" href="{{ site.baseurl }}/about.html">Project Archive</a>
   </footer>
 </center>
 
-<center class="cf tc tl-ns ph3 ph4-ns pv4 pv6-ns bg-washed-green" id="services">
+<center class="cf tl-ns ph3 ph4-ns pv4 pv6-ns bg-yellow" id="services">
   <header class="wow animated fadeInDown">
-    <h1 class="f2 f1-ns lh-title tracked-tight">Services</h1>
+    <h1 class="f3 mb5 f2-ns lh-title tracked-tight">General Services</h1>
   </header>
-  <article class="fl w-100 w-third-l ph3 ph4-ns pv3 pv4-ns hover-bg-white">
-    <header class="wow animated fadeInUp">
-      <a class="dib no-underline hover-blue dark-gray" href="{{ site.baseurl }}/web-interactive-design.html">
-        <h1 class="f4 f3-ns lh-title">Web &amp; Interactive Design</h1>
-      </a>
-    </header>
-    <p class="measure lh-copy wow animated fadeIn">We focus on design and technology as a broader approach to user experience, product performance and consumer perception. A website is a necessary tool for nearly every business and organization. Our interactive design approach focuses on usability, impact, and achieving results.</p>
-    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/web-interactive-design.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  </article>
-  <article class="fl w-100 w-third-l ph3 ph4-ns pv3 pv4-ns hover-bg-white">
-    <header class="wow animated fadeInUp">
-      <a class="dib no-underline hover-blue dark-gray" href="{{ site.baseurl }}/branding-strategy.html">
-        <h1 class="f4 f3-ns lh-title">Branding &amp; Strategy</h1>
-      </a>
-    </header>
-    <p class="measure lh-copy wow animated fadeIn">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. By looking at the your goals and budget, we’ll create a strategy to reach your users across all digital mediums that articulates who you are, what you do, and why it matters.</p>
-    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/branding-strategy.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  </article>
-  <article class="fl w-100 w-third-l ph3 ph4-ns pv3 pv4-ns hover-bg-white">
-    <header class="wow animated fadeInUp">
-      <a class="dib no-underline hover-blue dark-gray" href="{{ site.baseurl }}/technology-consulting.html">
-        <h1 class="f4 f3-ns lh-title">Technology Consulting</h1>
-      </a>
-    </header>
-    <p class="measure lh-copy wow animated fadeIn">Technology can solve real business problems by enabling new user experiences that promote growth and innovation. Studiocraft takes an agnostic approach towards technology to best fit the needs of you and your customer. The best-planned experience is wasted without a top-notch implementation.</p>
-    <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology-consulting.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  </article>
+  <div class="cf">
+  {% for service in page.services %}
+    <article class="fl ma0 relative w-100 w-third-l tl-ns ph3 ph4-ns pv3 pv4-ns bg-animate {% cycle 'bg-white', 'bg-near-white' %} hover-bg-light-gray">
+      <header class="db w-100 wow animated fadeInUp">
+        <h1 class="mv2 f4 f3-ns lh-title">
+          <a class="dib no-underline hover-dark-pink dark-gray" href="{{ site.baseurl }}/web-interactive-design.html">{{ service.name }}</a>
+        </h1>
+      </header>
+      <a class="dib link dark-pink underline-hover b ttu mv4" href="{{ site.baseurl }}/web-interactive-design.html">More<i class="fa fa-fw fa-long-arrow-right"></i></a>
+      <p class="measure dn db-ns lh-copy wow animated fadeIn">{{ service.description }}</p>
+    </article>
+  {% endfor %}
+  </div>
 </center>
 
-<center class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="about">
+<section id="about" class="ph3 ph4-ns pv4 pv6-ns bg-washed-green" data-flickity='{ "wrapAround": true }'>
+  <center class="w-100">
     <header class="wow animated fadeInDown">
-    <h1 class="f2 f1-ns lh-title tracked-tight">About</h1>
-  </header>
-  <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} is a user-centric independent design consultancy focusing on simplicity. Our creative process blends visual design, user experience, and content strategy to create relevant, brand-driven experiences that bring brands closer to their customers.</p>
-  <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-black b ttu tracked" href="{{ site.baseurl }}/about.html">Our Story</a>
-</center>
-{% include location.html %}
+      <h1 class="f2 f1-ns lh-title tracked-tight">About</h1>
+    </header>
+    <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} is {{ site.about }}</p>
+    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib dark-gray b ttu tracked" href="{{ site.baseurl }}/about.html">Our Story</a>
+  </center>
+  <center class="w-100">
+    <header class="wow animated fadeInDown">
+      <h1 class="f2 f1-ns lh-title tracked-tight">People</h1>
+    </header>
+    <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} is {{ site.about }}</p>
+    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib dark-gray b ttu tracked" href="{{ site.baseurl }}/about.html">Meet the Team</a>
+  </center>
+</section>
+
 {% include contact.html %}
+{% include location.html %}
 {% include subscribe.html %}
 
 <!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
